<resources>
    <string name="app_name">LU CART</string>
    <string name="client_id">179629333292-knuqj9rtkti72od06a4qndgnk1na8fli.apps.googleusercontent.com</string>

    <string name="facebook_app_id">1869165270274565</string>
    <string name="fb_login_protocol_scheme">fb1869165270274565</string>
    <string name="facebook_client_token">EAAajZCvP2EgUBOxyKs9gK1yr71SaydnVyDRZAKmQZAkoptQP1apFVCMyMplFTR58QyelZCSxrUxM6PGOcqtvA8uRCiCHLeiZBZCxodUg5aqPalrZBsOBkvcJS4EY70DXuSFdNUSmd0dkaTds5lxMoqiJGo4LvqwjndHbRXm8j2lYXa7hS0HHE8O7rMZAarwvUO09ut7OTCmiTnRH9hK2pnfnuZBOvZCxmy5mTHotvR0GIIjZAY6X46AneDZBkBAN0DZBC1QZDZD</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_products">My Products</string>
    <string name="add">Add</string>
    <string name="logo">logo</string>
    <string name="productimage">ProductImage</string>
    <string name="product_name">Product Name :</string>
    <string name="product_price">Product Price :</string>
    <string name="product_description">Product Description :</string>
    <string name="stock_number">Stock Number :</string>
    <string name="upload_product">Upload Product</string>
    <string name="cancel">cancel</string>
    <string name="pending_products">Pending Products</string>
    <string name="view_statistics">View Statistics</string>
    <string name="approve_products">Approve Products</string>
    <string name="back">Back</string>
    <string name="approve_all_products">Approve All Products</string>
    <string name="pending_approvals">Pending Approvals</string>
    <string name="goback">goback</string>
    <string name="approvals">Approvals</string>
    <string name="statistics">Statistics</string>
    <string name="approve">Approve</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="please_enter_your_email_and_password">Please enter your email and password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="proceed">Proceed</string>
    <string name="image_email">image_email</string>
    <string name="welcome_admin">Welcome, Admin!</string>
    <string name="log_out">Log out</string>
    <string name="login">Login</string>
    <string name="choose_image">Choose Image</string>
    <string name="productimageview">productImageView</string>
    <string name="its_name">its Name</string>
    <string name="its_price">its Price</string>
    <string name="the_description">The Description</string>
    <string name="the_stock">the Stock:</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="_1">1</string>
    <string name="addbutton">addButton</string>
    <string name="minus">minus</string>
    <string name="favoritesadd">favoritesAdd</string>
    <string name="decrease">Decrease</string>
    <string name="increase">Increase</string>
    <string name="backbtn">Backbtn</string>
    <string name="electronics">Electronics</string>
    <string name="accessories">Accessories</string>
    <string name="clothes">Clothes</string>
    <string name="foods">Foods</string>
    <string name="_0_00">₱0.00</string>
    <string name="food">Food</string>
    <string name="category">Category</string>
    <string name="order_now">Order Now</string>
    <string name="quantity">Quantity:</string>
    <string name="plus">plus</string>
    <string name="imageproduct">imageProduct</string>
    <string name="price">Price</string>
    <string name="favorite">favorite</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="mode_of_payment">Mode Of Payment</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="filter">filter</string>
    <string name="notif">notif</string>
    <string name="lu">Lu</string>
    <string name="notifications">Notifications</string>
    <string name="bakbuton">bakButon</string>
    <string name="remove_product">remove product</string>
    <string name="transactions">Transactions</string>
    <string name="total_php_0_00">Total: PHP 0.00</string>
    <string name="status_to_ship">Status: To Ship</string>
    <string name="location_example_street">Location: Example Street</string>
    <string name="pname">pName</string>
    <string name="qty">Qty</string>
    <string name="pimage">pImage</string>
    <string name="preceive">pReceive</string>
    <string name="description">Description</string>
    <string name="ivedit">ivedit</string>
    <string name="my_profile">My Profile</string>
    <string name="accories">Accories</string>
    <string name="pending">Pending</string>
    <string name="products">Products</string>
    <string name="view">View</string>
    <string name="statistics2">Statistics</string>
    <string name="sign_out">Sign Out</string>
</resources>