<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:layout_width="115dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/logo"
        android:padding="3dp"
        android:src="@drawable/ic_lucart"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="289dp"
        android:layout_height="50dp"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/hello_there_admin"
        android:textAlignment="center"
        android:textColor="@color/superduperdark_green"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_approve_products"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_margin="10dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/border"
        android:contentDescription="@string/approve"
        android:scaleType="centerInside"
        android:src="@drawable/ic_aprrove"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.431" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/approve_products"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:paddingTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/btn_approve_products"
        app:layout_constraintStart_toStartOf="@id/btn_approve_products"
        app:layout_constraintEnd_toEndOf="@id/btn_approve_products" />

    <!-- View Statistics Button -->

    <ImageButton
        android:id="@+id/btn_view_statistics"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_margin="10dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/border"
        android:contentDescription="@string/statistics"
        android:scaleType="centerInside"
        android:src="@drawable/ic_statistics"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.793"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.433" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_statistics"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:paddingTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/btn_view_statistics"
        app:layout_constraintStart_toStartOf="@id/btn_view_statistics"
        app:layout_constraintEnd_toEndOf="@id/btn_view_statistics" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="106dp"
        android:layout_height="49dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/border"
        android:text="@string/log_out"
        android:textColor="@color/dark_green"
        android:textSize="16sp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
