<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCartItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="15dp" />

        <!-- Total Price -->
        <TextView
            android:id="@+id/tvTotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_php_0_00"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <!-- Status -->
        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_to_ship"
            android:textSize="14sp"
            android:layout_marginBottom="4dp" />

        <!-- Location -->
        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_example_street"
            android:textSize="14sp"
            android:layout_marginBottom="4dp" />

        <!-- Payment Method -->
        <TextView
            android:id="@+id/tvModeOfPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_of_payment"
            android:textSize="14sp" />

        <!-- Cacnele and delete -->
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:text="Cancel"
            android:textAllCaps="false"
            android:padding="8dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/ten_green"
            android:textColor="@color/white" />



    </LinearLayout>
</androidx.cardview.widget.CardView>
