<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="Add Product"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            app:cardPreventCornerOverlap="true"
            app:cardCornerRadius="25dp">

            <ImageView
                android:id="@+id/ivProductImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/productimage"
                android:src="@drawable/bg_image_placeholder"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/buttonUploadPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="12sp"
            android:text="@string/choose_image" />

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_semibold"/>

            <EditText
                android:id="@+id/editTextProductName"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:fontFamily="@font/montserrat"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_price"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_semibold"/>

            <EditText
                android:id="@+id/editTextProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:autofillHints=""
                android:textAlignment="center"
                android:hint="@string/_0_00"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_description"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_semibold"/>

            <EditText
                android:id="@+id/editTextProductDescription"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stock_number"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_semibold"/>

            <EditText
                android:id="@+id/editTextStockNumber"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:fontFamily="@font/montserrat"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Category:"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_semibold"/>

            <Spinner
                android:id="@+id/spinnerCategory"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:entries="@array/product_categories" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cancel"/>

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>