<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/white_green">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        android:padding="12dp"
        android:backgroundTint="@color/white">

        <CheckBox
            android:id="@+id/chkFoods"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/foods"
            android:textSize="16sp"
            android:padding="8dp"
            android:textColor="@color/superduperdark_green"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        android:padding="12dp"
        android:backgroundTint="@color/white">

        <CheckBox
            android:id="@+id/chkClothes"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/clothes"
            android:textSize="16sp"
            android:padding="8dp"
            android:textColor="@color/superduperdark_green"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        android:padding="12dp"
        android:backgroundTint="@color/white">

        <CheckBox
            android:id="@+id/chkAccessories"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/accessories"
            android:textSize="16sp"
            android:padding="8dp"
            android:textColor="@color/superduperdark_green"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        android:padding="12dp"
        android:backgroundTint="@color/white">

        <CheckBox
            android:id="@+id/chkElectronics"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/electronics"
            android:textSize="16sp"
            android:padding="8dp"
            android:textColor="@color/superduperdark_green"/>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="end">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:textColor="@color/superduperdark_green"
            android:backgroundTint="@color/white"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/btnApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Apply"
            android:textColor="@color/superduperdark_green"
            android:backgroundTint="@color/white"/>

    </LinearLayout>

</LinearLayout>
